# gir-test

./: .gitmodules  README.md  foo.gir  foo_double.c  foo_double.h  meson.build
foo/foo-sys/: Cargo.toml  Gir.toml  build.rs
foo/foo-sys/src/: lib.rs
foo/foo-sys/src/auto/: versions.txt
gir-files/: GLib-2.0.gir
