[package]
name = "foo-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps]

[package.metadata.docs.rs]
features = []

[lib]
name = "foo_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
